Prefix files with “ham” to avoid conflicts

--- a/.gitignore
+++ b/.gitignore
@@ -19,18 +19,18 @@ survey.sh
 **/*.out
 **/*.a
 autom4te.cache/
-scp
-sftp
-sftp-server
-ssh
-ssh-add
-ssh-agent
-ssh-keygen
-ssh-keyscan
-ssh-keysign
-ssh-pkcs11-helper
-ssh-sk-helper
-sshd
+hamscp
+hamsftp
+hamsftp-server
+hamssh
+hamssh-add
+hamssh-agent
+hamssh-keygen
+hamssh-keyscan
+hamssh-keysign
+hamssh-pkcs11-helper
+hamssh-sk-helper
+hamsshd
 !regress/misc/fuzz-harness/Makefile
 !regress/unittests/sshsig/Makefile
 tags
